--- a/src/main.css
+++ b/src/main.css
@@ -6,3 +6,12 @@ main {
     width: 90%;
     margin: 0 auto;
 }
+
+.play-list-title {
+    width: 290px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: left;
+    padding-left: 5px;
+}
