--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,7 @@ body {
 
 main {
     width: 90%;
+    min-height: 100vh;
     margin: 0 auto;
 }
 
@@ -14,4 +15,11 @@ main {
     white-space: nowrap;
     text-align: left;
     padding-left: 5px;
+}
+
+footer {
+    margin-top: 40px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    background-color: #191414;
 }
